# haskell-nix-templates

./: README.md
application/: README.md  cabal.project  default.nix  release.nix  run.sh  watch.sh
application/application/: LICENSE  application.cabal
application/application/src/: Application.hs
