name:                application
version:             0.0.1.0
synopsis:            Template for haskell package.
description:
  Template for haskell package.
  .
  See README.md
license:             MIT
license-file:        LICENSE
copyright:           2020 <Author>
maintainer:          <Author> <Email>
category:            Data
build-type:          Simple
cabal-version:       1.24
extra-source-files:
  ../README.md
  CHANGELOG.md

source-repository head
  type: git
  location: https://github.com/<Author>/<repository>

library
  hs-source-dirs:      src
  exposed-modules:
    Application
  build-depends:
      base            >= 4.5      && < 4.14
  default-language:    Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GADTs
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TupleSections
    TypeOperators

executable application
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base
    , application
  default-language:    Haskell2010
